src/components/Header/Header.scss
$lightFont: #ffffff;
$buttonColour: #e50914;

.header {
  width: 100%;
  height: 90vh;
  position: relative;
  background: url("../../assets/background.jpg") no-repeat center center/cover;
}

.overlay {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.5);
  box-shadow: inset 120px 100px 250px #000000, inset -120px -100px 250px #000000;
}

.header-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  width: 50%;
  margin: 0 auto;

  h1 {
    font-weight: 600;
    font-size: 4rem;
    line-height: 1.1;
    margin-top: 8rem;
    margin-bottom: 2rem;
  }

  p {
    color: $lightFont;
    font-weight: 400;
    font-size: 1.9rem;
    line-height: 1.25;
    margin: 0 0 2rem;
  }

  button {
    color: $lightFont;
    background: $buttonColour;
    font-size: 1.75rem;
    padding: 1.5rem;
    text-transform: uppercase;
    display: flex;
    align-items: center;

    &:hover {
      opacity: 0.9;
    }
  }
}

@media screen and (max-width: 1160px) {
  .header-content {
    h1 {
      margin-top: 6rem;
    }
  }
}

@media screen and (max-width: 960px) {
  .header {
    height: 70vh;
  }

  .navbar {
    img {
      width: 150px;
    }
  }

  .header-content {
    h1 {
      font-size: 3.7rem;
      line-height: 1;
      margin-top: 3rem;
    }

    p {
      font-size: 1.5rem;
    }

    button {
      font-size: 1.25rem;
      padding: 1rem 2rem;
    }
  }
}

@media screen and (max-width: 760px) {
  .header {
    overflow: hidden;
    &::after {
      background: rgba(0, 0, 0, 0.6);
      box-shadow: inset 80px 80px 150px #000000, inset -80px -80px 150px #000000;
    }

    .header-content {
      h1 {
        font-size: 3rem;
        line-height: 1;
      }

      p {
        font-size: 1.25rem;
      }

      button {
        font-size: 0.85rem;
        padding: 1.2rem 1.6rem;
      }
    }
  }
}

@media screen and (max-width: 500px) {
  .header-content {
    h1 {
      font-size: 2rem;
      line-height: 1;
      margin-top: 2.5rem;
    }

    p {
      font-size: 1rem;
    }

    button {
      font-size: 0.75rem;
      padding: 1rem 1.25rem;
    }
  }
}

